# calendar-sync

./: .gitignore  CLAUDE.md  README.md  WEBHOOK_DEBUG_GUIDE.md  pyproject.toml  test_gone_gone_cleanup.py
.claude/agents/: copywriter_subagent.md  coverage_subagent.md  guilfoyle_subagent.md
docs/: GETTING_STARTED.md  PRD.md  TECHNICAL_CONTEXT.md  sync-policies.md
docs/testing-architecture/: 00-GUILFOYLE-TESTING-MANIFESTO.md  02-integration-tests-first.md  05-legacy-test-elimination.md  06-testing-guidelines-and-patterns.md
docs/uuid-correlation-architecture/: 00-architecture-overview.md  05-testing-validation.md
scripts/: analyze_webhooks.py
src/: .env.sample  manage.py
src/apps/accounts/: admin.py  models.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/services/: __init__.py  oauth_service.py
src/apps/accounts/tests/: __init__.py  test_models_backup.py  test_views.py
src/apps/calendars/: admin.py  constants.py  models.py  utils.py
src/apps/calendars/management/commands/: cleanup_disabled_calendars.py  recover_stuck_cleanups.py  refresh_tokens.py  reset_calendar.py  run_scheduler.py  sync_calendars.py  yolo_sync_repair.py
src/apps/calendars/migrations/: 0001_initial.py  0002_add_cleanup_fields.py  0002_alter_calendar_name_alter_event_title_and_more.py  0003_add_meeting_invite_field.py  0003_optimize_cleanup_index.py  0004_add_webhook_fields.py  0005_add_event_state_model.py
src/apps/calendars/services/: __init__.py  base.py  calendar_service.py  encryption.py  google_calendar_client.py  sync_engine.py  token_manager.py  token_manager_complex.py.backup  uuid_sync_engine.py
src/apps/calendars/tests/: test_automatic_sync.py  test_encryption.py  test_gone_gone_cleanup.py  test_google_calendar_client.py  test_models.py  test_sync_command.py  test_sync_engine.py  test_token_manager.py  test_token_manager_complex.py.backup  test_token_refresh_toggle.py  test_uuid_correlation.py
src/apps/dashboard/: test_performance.py  test_security.py  test_template_accessibility.py  tests.py  urls.py  views.py
src/apps/dashboard/services/: __init__.py  dashboard_service.py
src/apps/dashboard/tests/: test_calendar_toggle.py  test_global_sync.py  test_integration.py  test_multiple_accounts.py  test_template_accessibility.py  test_views.py
src/apps/webhooks/: apps.py  tests.py  urls.py  views.py
src/apps/webhooks/management/commands/: setup_webhooks.py
src/calendar_sync/: asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: base.css
src/static/js/: app.js  theme-init.js
src/tasks/uuid-correlation-architecture/: 01-event-state-model.md  02-google-calendar-integration.md  03-sync-engine-redesign.md  04-migration-strategy.md  README.md
src/templates/: base.html
src/templates/dashboard/: account_detail.html  index.html
src/templates/dashboard/partials/: calendar_sync_status.html
src/templates/registration/: login.html
tasks/: 00-task-overview.md  01-setup-infrastructure.md  02-enhanced-authentication.md  02-models-authentication.md  03-enhanced-google-integration.md  03-google-calendar-integration.md  04-sync-engine-implementation.md  05-web-interface.md  06-testing-deployment.md  07-critical-security-fixes.md  08-secure-template-refactor.md  09-view-layer-optimization.md  10-business-logic-extraction.md  11-oauth-callback-hardening.md  12-comprehensive-test-suite.md  13-code-quality-improvements.md  14-performance-monitoring.md  ENHANCED-TASK-BREAKDOWN.md
tasks/guilfoyle-testing-architecture/: 01-test-infrastructure-foundation.md  03-focused-unit-tests.md  04-authentication-flow-testing.md  05-legacy-test-elimination.md
tasks/incremental-sync-optimization/: 00-overview-and-risks.md  01-sync-token-foundation.md  02-event-change-processing.md  03-cross-calendar-impact.md  04-database-consistency.md  05-testing-strategy.md
tasks/webhook-architecture-implementation/: 00-GUILFOYLE-SIMPLIFIED-APPROACH.md  00-webhook-strategy-overview.md  01-database-infrastructure.md  02-webhook-endpoints-and-validation.md  03-subscription-management.md  04-sync-engine-integration.md  05-testing-and-development-strategy.md  06-deployment-and-monitoring.md
